[package]
name = "async-tut"
version = "0.1.0"
authors = ["Eric Tu <tu.eric@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
sync = []
threaded = []

[[example]]
name = "1"

[dependencies]
async-std = { version = "1.2.0", features = ["attributes", "unstable"] }
futures = {version = "0.3.1"}
rand = {version = "0.7.2"}